增加常用helper，避免后续项目的麻烦

--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "fzaninotto/faker": "^1.6"
     },
     "autoload": {
+        "files": ["helper.php"],
         "psr-4": {
             "huoybb\\core\\":"src/"
         }
