--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "robmorgan/phinx": "^0.7.1",
         "guzzlehttp/guzzle": "^6.2",
         "fabpot/goutte": "^3.1",
-        "fzaninotto/faker": "^1.6"
+        "fzaninotto/faker": "^1.6",
+        "symfony/finder": "^4.1",
+        "phpoffice/phpspreadsheet": "^1.2"
     },
     "autoload": {
         "files": ["helper.php"],
